tests/ui/no_clone.stderr
error[E0277]: the trait bound `NoClone: Clone` is not satisfied
  --> tests/ui/no_clone.rs:16:13
   |
16 |     let _ = post_inc!(x);
   |             ^^^^^^^^^^^^ the trait `Clone` is not implemented for `NoClone`
   |
   = note: this error originates in the macro `post_inc` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider annotating `NoClone` with `#[derive(Clone)]`
   |
 5 + #[derive(Clone)]
 6 | struct NoClone(i32);
   |
